@@ -28,8 +28,11 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Set;
 
+import static network.aika.neuron.activation.Scope.*;
 import static network.aika.neuron.activation.direction.Direction.INPUT;
+import static network.aika.neuron.activation.direction.Direction.OUTPUT;
 
 /**
  *
@@ -53,7 +56,6 @@ public class PatternPartSynapse<I extends Neuron<?>> extends ExcitatorySynapse<I
         super(input, output, template);
     }
 
-
     public PatternPartSynapse(I input, PatternPartNeuron output, Synapse template, boolean isNegative, boolean isRecurrent, boolean inputScope, boolean isSamePattern) {
         super(input, output, template);
         this.isNegative = isNegative;
@@ -62,17 +64,20 @@ public class PatternPartSynapse<I extends Neuron<?>> extends ExcitatorySynapse<I
         this.isSamePattern = isSamePattern;
     }
 
-
     @Override
     public void updateReference(Link l) {
         if(isNegative)
+            return;
+
+        Reference iRef = l.getInput().getReference();
+        if(iRef == null)
             return;
 
         // TODO: find a better solution.
         Synapse ts = l.getSynapse().getTemplate();
         Templates t = getModel().getTemplates();
         if(ts != t.RELATED_INPUT_SYNAPSE_FROM_INHIBITORY_TEMPLATE && ts != t.RELATED_INPUT_SYNAPSE_FROM_PP_TEMPLATE) {
-            l.getOutput().propagateReference(l.getInput().getReference());
+            l.getOutput().propagateReference(iRef);
         }
     }
 
@@ -80,14 +85,14 @@ public class PatternPartSynapse<I extends Neuron<?>> extends ExcitatorySynapse<I
         if (v.startDir == INPUT) {
             return !act.getNeuron().isInputNeuron() && this == act.getModel().getTemplates().RECURRENT_SAME_PATTERN_SYNAPSE_TEMPLATE;
         } else {
-            return true;
+            return act.getNeuron() instanceof PatternNeuron || !isInputScope();
         }
     }
 
     @Override
     protected boolean checkCausality(Activation fromAct, Activation toAct, Visitor v) {
         if(!isRecurrent) {
-            return fromAct.getFired().compareTo(toAct.getFired()) < 0;
+            return fromAct.getFired().compareTo(toAct.getFired()) <= 0;
         } else {
             return v.getSelfRef();
         }
@@ -117,34 +122,53 @@ public class PatternPartSynapse<I extends Neuron<?>> extends ExcitatorySynapse<I
     }
 
     @Override
-    public Collection<Scope> transition(Scope s, Direction dir) {
+    public Set<Scope> transition(Scope s, Direction dir, boolean checkFinalRequirement) {
         if(inputScope) {
             if(dir == INPUT) {
+                if(checkFinalRequirement && s != PP_SAME) {
+                    return Collections.emptySet();
+                }
+
                 switch (s) {
                     case PP_SAME:
-                        return Collections.singleton(Scope.PP_INPUT);
+                        return Collections.singleton(PP_INPUT);
                     case PP_RELATED_SAME:
                     case PP_INPUT:
-                        return Collections.singleton(Scope.PP_RELATED_INPUT);
+                        return Collections.singleton(PP_RELATED_INPUT);
                     case I_SAME:
-                        return Collections.singleton(Scope.I_INPUT);
+                        return Collections.singleton(I_INPUT);
                 }
             } else {
+                if(checkFinalRequirement && s != PP_INPUT) {
+                    return Collections.emptySet();
+                }
+
                 switch (s) {
                     case PP_INPUT:
-                        return Arrays.asList(Scope.PP_SAME, Scope.PP_RELATED_INPUT);
+                        return Set.of(PP_SAME, PP_RELATED_INPUT);
                     case PP_RELATED_INPUT:
-                        return Collections.singleton(Scope.PP_RELATED_SAME);
+                        return Collections.singleton(PP_RELATED_SAME);
                     case I_INPUT:
-                        return Collections.singleton(Scope.I_SAME);
+                        return Collections.singleton(I_SAME);
                 }
             }
         }
 
         if(isSamePattern) {
+            if(checkFinalRequirement) {
+                if(dir == INPUT && s != PP_SAME) {
+                    return Collections.emptySet();
+                }
+                if(dir == OUTPUT && s != PP_RELATED_SAME && s != PP_SAME) {
+                    return Collections.emptySet();
+                }
+            }
+
             switch (s) {
                 case PP_SAME:
-                    return Collections.singleton(Scope.PP_RELATED_SAME);
+                    return Set.of(PP_RELATED_SAME, PP_SAME);
+                case PP_RELATED_SAME:
+                    return Collections.singleton(PP_SAME);
                 case PP_RELATED_INPUT:
                 case PP_INPUT:
                 case P_SAME:
@@ -152,7 +176,7 @@ public class PatternPartSynapse<I extends Neuron<?>> extends ExcitatorySynapse<I
             }
         }
 
-        return Collections.emptyList();
+        return Collections.emptySet();
     }
 
     @Override
